<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:enabled="true"
        android:id="@+id/nav_group"
        android:visible="true">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_fav"
            android:title="@string/favorites" />
        <item
            android:id="@+id/delete_fav"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/remove_all_favorites"
            android:onClick="removeAll"/>
    </group>
</menu>